--- a/src/main/webapp/app/exercises/text/assess-new/textblock-assessment-card/textblock-assessment-card.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/textblock-assessment-card/textblock-assessment-card.component.html
@@ -5,7 +5,7 @@
     (dragover)="$event.preventDefault()"
     [innerText]="textBlockRef.block.text"
     (click)="select()"
-    [class.text-with-feedback]="textBlockRef.feedback"
+    [class.text-with-feedback]="!!textBlockRef.feedback"
     [class.active]="selected"
     [class.positive-feedback]="textBlockRef.feedback?.credits > 0"
     [class.negative-feedback]="textBlockRef.feedback?.credits < 0"
