temporarily exchange the load exam with an existing endpoint for tutors and instructors put exam into local storage immediately after it was downloaded

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -16,7 +16,7 @@
                 <jhi-exam-navigation-bar
                     id="exam-navigation-bar"
                     [exercises]="studentExam.exercises"
-                    [endDate]="studentExam.exam.endDate"
+                    [endDate]="exam.endDate"
                     (onExerciseChanged)="onExerciseChange($event)"
                 ></jhi-exam-navigation-bar>
                 <jhi-quiz-submission-exam
