--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -40,7 +40,7 @@
     <div class="col">
         <div class="row justify-content-end align-items-center flex-nowrap pr-2">
             <div class="col-auto">
-                <button *ngIf="!isProgrammingExercise" class="btn btn-sm btn-primary px-3" (click)="submitExam()">
+                <button *ngIf="!isProgrammingExercise(this.exercises[this.exerciseIndex])" class="btn btn-sm btn-primary px-3" (click)="submitExam()">
                     {{ 'artemisApp.examParticipation.submitOtherExercise' | translate }}
                 </button>
                 <button *ngIf="isProgrammingExercise" class="btn btn-sm btn-primary px-3" (click)="submitExam()">
