--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise-import.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise-import.component.html
@@ -6,7 +6,7 @@
     <div class="modal-body">
         <div class="form-group form-inline">
             Search for exercise: <input class="form-control ml-2" type="text" name="searchExcercise" [(ngModel)]="searchTerm" />
-            <span class="ml-3" *ngIf="loading" jhiTranslate="artemisApp.programmingExercise.import.loading">Loading...</span>
+            <span class="ml-3" *ngIf="loading" jhiTranslate="artemisApp.exercise.import.loading">Loading...</span>
         </div>
         <table class="table table-striped">
             <thead class="thead-dark">
