--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -155,7 +155,7 @@
                     <ng-container *ngIf="isImport">
                         <ngb-alert [dismissible]="false">
                             <span class="font-weight-bold">{{ 'artemisApp.programmingExercise.import.attention' | translate }}</span
-                            ><span>{{ 'artemisApp.programmingExercise.import.markdownWarning' | translate }}</span>
+                            ><span>{{ 'artemisApp.exercise.import.markdownWarning' | translate }}</span>
                         </ngb-alert>
                         <jhi-programming-exercise-instructions
                             [exercise]="programmingExercise"
