refactor submit button

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -40,12 +40,14 @@
     <div class="col">
         <div class="row justify-content-end align-items-center flex-nowrap pr-2">
             <div class="col-auto">
-                <button *ngIf="!isProgrammingExercise(this.exercises[this.exerciseIndex])" class="btn btn-sm btn-primary px-3" (click)="submitExam()">
-                    {{ 'artemisApp.examParticipation.submitOtherExercise' | translate }}
-                </button>
-                <button *ngIf="isProgrammingExercise" class="btn btn-sm btn-primary px-3" (click)="submitExam()">
+                <button *ngIf="isProgrammingExercise(); else notAProgrammingExercise" class="btn btn-sm btn-primary px-3" (click)="submitExam()">
                     {{ 'artemisApp.examParticipation.submitProgrammingExercise' | translate }}
                 </button>
+                <ng-template #notAProgrammingExercise>
+                    <button class="btn btn-sm btn-primary px-3" (click)="submitExam()">
+                        {{ 'artemisApp.examParticipation.submitOtherExercise' | translate }}
+                    </button>
+                </ng-template>
             </div>
             <div class="col-auto h5 m-0 text-overflow px-3 py-2 remaining-time" [class.critical]="criticalTime">
                 {{ remainingTime }}
