--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -19,27 +19,29 @@
                     [endDate]="exam.endDate"
                     (onExerciseChanged)="onExerciseChange($event)"
                 ></jhi-exam-navigation-bar>
-                <jhi-quiz-submission-exam
-                    *ngSwitchCase="QUIZ"
-                    [exercise]="activeExercise"
-                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
-                ></jhi-quiz-submission-exam>
-                <jhi-text-editor-exam
-                    *ngSwitchCase="TEXT"
-                    [exercise]="activeExercise"
-                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
-                ></jhi-text-editor-exam>
-                <jhi-modeling-submission-exam
-                    *ngSwitchCase="MODELING"
-                    [exercise]="activeExercise"
-                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
-                ></jhi-modeling-submission-exam>
-                <jhi-programming-submission-exam
-                    *ngSwitchCase="PROGRAMMING"
-                    [exercise]="activeExercise"
-                    [studentParticipation]="activeExercise.studentParticipations[0]"
-                    [courseId]="courseId"
-                ></jhi-programming-submission-exam>
+                <ng-container *ngIf="_reload">
+                    <jhi-quiz-submission-exam
+                        *ngSwitchCase="QUIZ"
+                        [exercise]="activeExercise"
+                        [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                    ></jhi-quiz-submission-exam>
+                    <jhi-text-editor-exam
+                        *ngSwitchCase="TEXT"
+                        [exercise]="activeExercise"
+                        [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                    ></jhi-text-editor-exam>
+                    <jhi-modeling-submission-exam
+                        *ngSwitchCase="MODELING"
+                        [exercise]="activeExercise"
+                        [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                    ></jhi-modeling-submission-exam>
+                    <jhi-programming-submission-exam
+                        *ngSwitchCase="PROGRAMMING"
+                        [exercise]="activeExercise"
+                        [studentParticipation]="activeExercise.studentParticipations[0]"
+                        [courseId]="courseId"
+                    ></jhi-programming-submission-exam>
+                </ng-container>
             </ng-container>
         </ng-container>
         <!-- exam connection status footer bar -->
