--- a/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/update/programming-exercise-update.component.html
@@ -154,7 +154,7 @@
                     <label class="form-control-label" for="field_problemStatement" jhiTranslate="artemisApp.programmingExercise.problemStatement.title"></label>
                     <ng-container *ngIf="isImport">
                         <ngb-alert [dismissible]="false">
-                            <span class="font-weight-bold">{{ 'artemisApp.programmingExercise.import.attention' | translate }}</span
+                            <span class="font-weight-bold">{{ 'artemisApp.exercise.import.attention' | translate }}</span
                             ><span>{{ 'artemisApp.exercise.import.markdownWarning' | translate }}</span>
                         </ngb-alert>
                         <jhi-programming-exercise-instructions
