--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
@@ -23,3 +23,14 @@
     overflow: hidden;
     white-space: nowrap;
 }
+.synced {
+    color: white;
+    background-color: #2980b9;
+}
+.notSynced {
+    color: #1a1a1a;
+    background-color: yellow;
+}
+.inactive {
+    background-color: gray;
+}
