--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -24,13 +24,7 @@
                         i <= exerciseIndex + itemsVisiblePerSide - (exerciseIndex - itemsVisiblePerSide <= 0 ? exerciseIndex - itemsVisiblePerSide : 0)
                     "
                 >
-                    <button
-                        class="btn w-100"
-                        [ngClass]="setExerciseButtonStatus(i)"
-                        [class.btn-secondary]="i !== exerciseIndex"
-                        [class.btn-primary]="i === exerciseIndex"
-                        (click)="changeExercise(i)"
-                    >
+                    <button class="btn w-100" [ngClass]="setExerciseButtonStatus(i)" (click)="changeExercise(i)">
                         <fa-icon [icon]="icon"></fa-icon>
                     </button>
                 </div>
