--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -1,42 +1,42 @@
 <div class="quiz-content container">
-    <div *ngFor="let question of submission.submittedAnswers; let i = index">
+    <div *ngFor="let submitedAnswer of submission.submittedAnswers; let i = index">
         <jhi-multiple-choice-question
             id="question{{ i }}"
-            *ngIf="question.type === MULTIPLE_CHOICE"
-            [question]="question.quizQuestion"
-            [(selectedAnswerOptions)]="question.selectedOptions"
+            *ngIf="submitedAnswer.quizQuestion.type === MULTIPLE_CHOICE"
+            [question]="submitedAnswer.quizQuestion"
+            [(selectedAnswerOptions)]="submitedAnswer.quizQuestion.selectedOptions"
             [fnOnSelection]=""
             [clickDisabled]="true"
             [showResult]="false"
             [submittedResult]="null"
-            [submittedQuizExercise]="question.quizQuestion"
+            [submittedQuizExercise]="submitedAnswer.quizQuestion"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
-            [score]="question.quizQuestion.score"
+            [score]="submitedAnswer.quizQuestion.score"
         ></jhi-multiple-choice-question>
         <jhi-drag-and-drop-question
             id="question{{ i }}"
-            *ngIf="question.type === DRAG_AND_DROP"
-            [question]="question.quizQuestion"
-            [(mappings)]="question.mappings"
+            *ngIf="submitedAnswer.quizQuestion.type === DRAG_AND_DROP"
+            [question]="submitedAnswer.quizQuestion"
+            [(mappings)]="submitedAnswer.quizQuestion.mappings"
             [fnOnMappingUpdate]=""
             [clickDisabled]="true"
             [showResult]="false"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
-            [score]="question.quizQuestion.score"
+            [score]="submitedAnswer.quizQuestion.score"
         ></jhi-drag-and-drop-question>
         <jhi-short-answer-question
             id="question{{ i }}"
-            *ngIf="question.type === SHORT_ANSWER"
-            [question]="question.quizQuestion"
-            [(submittedTexts)]="question.submittedTexts"
+            *ngIf="submitedAnswer.quizQuestion.type === SHORT_ANSWER"
+            [question]="submitedAnswer.quizQuestion"
+            [(submittedTexts)]="submitedAnswer.quizQuestion.submittedTexts"
             [fnOnSubmittedTextUpdate]=""
             [clickDisabled]="true"
             [showResult]="false"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
-            [score]="question.quizQuestion.score"
+            [score]="submitedAnswer.quizQuestion.score"
         ></jhi-short-answer-question>
     </div>
 </div>
