Add Assessment Bubble
Signed-off-by: Jan Philip Bernius <janphilip.bernius@tum.de>

--- a/src/main/webapp/app/exercises/text/assess-new/manual-textblock-selection/manual-textblock-selection.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/manual-textblock-selection/manual-textblock-selection.component.html
@@ -7,6 +7,8 @@
         (didChange)="textBlockRefsChangeEmit()"
     ></jhi-textblock-assessment-card>
     <ng-template #selectionInterface>
-        <span [innerText]="group.getText(submission)" (jhiTextSelect)="handleTextSelection($event, group)"></span>
+        <jhi-manual-text-selection [positionRelative]="true" (assess)="handleTextSelection($event, group)">
+            <span [innerText]="group.getText(submission)"></span>
+        </jhi-manual-text-selection>
     </ng-template>
 </ng-container>
