--- a/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
@@ -1,7 +1,6 @@
 <div class="btn-group flex-btn-group-container">
-    <!-- TODO: display this button in exam mode when its functionality implemented -->
     <button
-        *ngIf="!examMode && exercise.isAtLeastTutor"
+        *ngIf="examMode || exercise.isAtLeastTutor"
         type="submit"
         [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'scores']"
         class="btn btn-info btn-sm mr-1"
@@ -9,19 +8,19 @@
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.scores">Scores</span>
     </button>
-    <!-- TODO: display this button in exam mode when its functionality implemented -->
+
     <button
         type="submit"
-        *ngIf="!examMode && exercise.isAtLeastInstructor"
-        [routerLink]="['/course-management', courseId, 'text-exercises', exercise.id, 'assessment']"
+        *ngIf="(examMode || exercise.isAtLeastInstructor) && exercise.type !== exerciseType.PROGRAMMING && exercise.type !== exerciseType.QUIZ"
+        [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id, 'assessment']"
         class="btn btn-primary btn-sm mr-1"
     >
         <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.courseOverview.exerciseDetails.instructorActions.submissions">Submissions</span>
     </button>
-    <!-- TODO: display this button in exam mode when its functionality implemented -->
+
     <button
-        *ngIf="!examMode && exercise.isAtLeastTutor"
+        *ngIf="examMode || exercise.isAtLeastTutor"
         type="submit"
         [routerLink]="['/course-management', courseId, 'exercises', exercise.id, 'participations']"
         class="btn btn-primary btn-sm mr-1"
@@ -29,6 +28,7 @@
         <fa-icon [icon]="['far', 'list-alt']"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.exercise.participations">Participations</span>
     </button>
+
     <button
         type="submit"
         *ngIf="!examMode && exercise.teamMode && exercise.isAtLeastTutor"
@@ -40,42 +40,14 @@
     </button>
 
     <button
-        *ngIf="exercise.type === exerciseType.TEXT"
+        *ngIf="(examMode || exercise.isAtLeastTutor) && exercise.type !== exerciseType.QUIZ"
         type="submit"
-        [routerLink]="['/course-management', courseId, 'text-exercises', exercise.id]"
+        [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id]"
         class="btn btn-info btn-sm mr-1"
     >
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
     </button>
-    <button
-        *ngIf="exercise.type === exerciseType.PROGRAMMING"
-        type="submit"
-        [routerLink]="['/course-management', courseId, 'programming-exercises', exercise.id]"
-        class="btn btn-info btn-sm mr-1"
-    >
-        <fa-icon [icon]="'eye'"></fa-icon>
-        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-    </button>
-    <button
-        *ngIf="exercise.type === exerciseType.FILE_UPLOAD"
-        type="submit"
-        [routerLink]="['/course-management', courseId, 'file-upload-exercises', exercise.id]"
-        class="btn btn-info btn-sm mr-1"
-    >
-        <fa-icon [icon]="'eye'"></fa-icon>
-        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-    </button>
-    <button
-        *ngIf="exercise.type === exerciseType.MODELING"
-        type="submit"
-        [routerLink]="['/course-management', courseId, 'modeling-exercises', exercise.id]"
-        class="btn btn-info btn-sm mr-1"
-    >
-        <fa-icon [icon]="'eye'"></fa-icon>
-        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-    </button>
-
     <button
         *ngIf="examMode && exercise.type === exerciseType.QUIZ"
         type="submit"
@@ -85,6 +57,7 @@
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.quizExercise.preview">Preview</span>
     </button>
+
     <button
         *ngIf="examMode && exercise.type === exerciseType.QUIZ"
         type="submit"
@@ -94,10 +67,12 @@
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="artemisApp.quizExercise.solution">Solution</span>
     </button>
+
     <button *ngIf="examMode || exercise.isAtLeastInstructor" type="submit" [routerLink]="createRouterLink('edit')" class="btn btn-primary btn-sm mr-1">
         <fa-icon [icon]="'pencil-alt'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
     </button>
+
     <button
         *ngIf="(examMode || exercise.isAtLeastInstructor) && exercise.type !== exerciseType.PROGRAMMING"
         jhiDeleteButton
@@ -109,6 +84,7 @@
     >
         <fa-icon [icon]="'times'"></fa-icon>
     </button>
+
     <button
         *ngIf="exercise.type === exerciseType.PROGRAMMING"
         jhiDeleteButton
