--- a/src/main/webapp/app/exam/participate/exercises/quiz/quiz-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/quiz/quiz-exam-submission.component.html
@@ -1,12 +1,11 @@
-<div class="quiz-content container" *ngIf="quizExercise">
-    <div *ngFor="let question of quizExercise.quizQuestions; let i = index">
+<div class="quiz-content container" *ngIf="exercise">
+    <div *ngFor="let question of exercise.quizQuestions; let i = index">
         <jhi-multiple-choice-question
             id="question{{ i }}"
             *ngIf="question.type === MULTIPLE_CHOICE"
             [question]="question"
             [(selectedAnswerOptions)]="selectedAnswerOptions[question.id]"
-            [fnOnSelection]="onSelectionChanged.bind(this)"
-            [submittedQuizExercise]="quizExercise"
+            [submittedQuizExercise]="exercise"
             [questionIndex]="i + 1"
         ></jhi-multiple-choice-question>
         <jhi-drag-and-drop-question
@@ -14,7 +13,6 @@
             *ngIf="question.type === DRAG_AND_DROP"
             [question]="question"
             [(mappings)]="dragAndDropMappings[question.id]"
-            [fnOnMappingUpdate]="onSelectionChanged.bind(this)"
             [questionIndex]="i + 1"
         ></jhi-drag-and-drop-question>
         <jhi-short-answer-question
@@ -22,15 +20,14 @@
             *ngIf="question.type === SHORT_ANSWER"
             [question]="question"
             [(submittedTexts)]="shortAnswerSubmittedTexts[question.id]"
-            [fnOnSubmittedTextUpdate]="onSelectionChanged.bind(this)"
             [questionIndex]="i + 1"
         ></jhi-short-answer-question>
     </div>
 </div>
-<div class="quiz-footer" *ngIf="quizExercise">
-    <div class="quiz-footer-content">
+<div class="quiz-navigation" *ngIf="exercise">
+    <div class="quiz-navigation-content">
         <div class="stepwizardquiz">
-            <div *ngFor="let question of quizExercise.quizQuestions; let i = index" class="stepwizardquiz__step">
+            <div *ngFor="let question of exercise.quizQuestions; let i = index" class="stepwizardquiz__step">
                 <div
                     *ngIf="question.type === DRAG_AND_DROP"
                     class="btn btn-light btn-circle stepbutton stepwizardquiz-circle draganddropcolor-question"
