--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -1,42 +1,37 @@
 <div class="quiz-content container">
-    <div *ngFor="let submitedAnswer of submission.submittedAnswers; let i = index">
+    <div *ngFor="let question of exercise.quizQuestions; let i = index">
         <jhi-multiple-choice-question
             id="question{{ i }}"
-            *ngIf="submitedAnswer.quizQuestion.type === MULTIPLE_CHOICE"
-            [question]="submitedAnswer.quizQuestion"
-            [(selectedAnswerOptions)]="submitedAnswer.quizQuestion.selectedOptions"
+            *ngIf="question.type === MULTIPLE_CHOICE"
+            [question]="question"
+            [(selectedAnswerOptions)]="selectedAnswerOptions[question.id]"
             [fnOnSelection]=""
             [clickDisabled]="true"
             [showResult]="false"
-            [submittedResult]="null"
-            [submittedQuizExercise]="submitedAnswer.quizQuestion"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
-            [score]="submitedAnswer.quizQuestion.score"
         ></jhi-multiple-choice-question>
         <jhi-drag-and-drop-question
             id="question{{ i }}"
-            *ngIf="submitedAnswer.quizQuestion.type === DRAG_AND_DROP"
-            [question]="submitedAnswer.quizQuestion"
-            [(mappings)]="submitedAnswer.quizQuestion.mappings"
+            *ngIf="question.type === DRAG_AND_DROP"
+            [question]="question"
+            [(mappings)]="dragAndDropMappings[question.id]"
             [fnOnMappingUpdate]=""
             [clickDisabled]="true"
             [showResult]="false"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
-            [score]="submitedAnswer.quizQuestion.score"
         ></jhi-drag-and-drop-question>
         <jhi-short-answer-question
             id="question{{ i }}"
-            *ngIf="submitedAnswer.quizQuestion.type === SHORT_ANSWER"
-            [question]="submitedAnswer.quizQuestion"
-            [(submittedTexts)]="submitedAnswer.quizQuestion.submittedTexts"
+            *ngIf="question.type === SHORT_ANSWER"
+            [question]="question"
+            [(submittedTexts)]="shortAnswerSubmittedTexts[question.id]"
             [fnOnSubmittedTextUpdate]=""
             [clickDisabled]="true"
             [showResult]="false"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
-            [score]="submitedAnswer.quizQuestion.score"
         ></jhi-short-answer-question>
     </div>
 </div>
